Make sure we deal with number overflow in some manor

--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -19,6 +19,8 @@
   text-align: right;
   padding: 0.5rem 1rem;
   margin-bottom: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .Calculator-inputs {
